--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>my foirst page</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>heloow</title>
+</head>
+<body>
+<header>the facts</header>
+<h1>what are you doing</h1>
+<h2>about u</h2>
+</body>
+</html>
